--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/node": "^10.12.21",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
+    "gulp": "^4.0.0",
+    "gulp-typescript": "^5.0.0",
     "mocha": "^5.2.0",
     "ts-node": "^8.0.2",
-    "typescript": "^3.3.1"
+    "typescript": "^3.3.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {},
   "keywords": [
